<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>bootstrap</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>WireDI Bootstrap</name>
    <description>Easy and simple di using annotation processors</description>

    <url>https://github.com/ThorbenKuck/SimpleDI</url>

    <parent>
        <groupId>com.wiredi</groupId>
        <artifactId>development-root</artifactId>
        <version>${revision}</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>19</java.version>
        <java-poet.version>1.11.1</java-poet.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service</artifactId>
                <version>${google-auto-service.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>${java-poet.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wiredi</groupId>
                <artifactId>annotations</artifactId>
                <version>${revision}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>com.wiredi</groupId>
                <artifactId>processors</artifactId>
                <version>${revision}</version>
                <scope>compile</scope>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>com.wiredi</groupId>
                <artifactId>logback-bundle</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.wiredi</groupId>
                <artifactId>runtime-environment</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.wiredi</groupId>
            <artifactId>runtime-environment</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wiredi</groupId>
            <artifactId>logback-bundle</artifactId>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>
                            --enable-preview
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <processorPath>
                                <groupId>com.wiredi</groupId>
                                <artifactId>processors</artifactId>
                                <version>${revision}</version>
                            </processorPath>
                            <annotationProcessorPath>
                                <groupId>com.wiredi</groupId>
                                <artifactId>processors</artifactId>
                                <version>${revision}</version>
                            </annotationProcessorPath>
                            <path>
                                <groupId>com.wiredi</groupId>
                                <artifactId>processors</artifactId>
                                <version>${revision}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>
